--- a/.github/workflows/skia.yaml
+++ b/.github/workflows/skia.yaml
@@ -29,6 +29,11 @@ jobs:
           node-version: 14
           check-latest: true
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '2.x'
+          architecture: 'x64'
+
       - name: Set env
         run: echo "${PWD}/depot_tools" >> $GITHUB_PATH
         shell: bash
@@ -41,7 +46,6 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           choco install llvm ninja -y
-          choco upgrade python -y
           pip install certifi
 
       - name: Compile skia
