--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,18 +1,36 @@
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "target-cpu=haswell"]
+
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "link-args=/NODEFAULTLIB:libcmt.lib"]
+rustflags = ["-C", "link-args=/NODEFAULTLIB:libcmt.lib", "-C", "target-cpu=haswell"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "target-cpu=haswell"]
+
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "target-cpu=apple-a14"]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
+rustflags = ["-C", "target-features=v8.1a"]
 
 [target.armv7-unknown-linux-gnueabihf]
 linker = "arm-linux-gnueabihf-gcc"
+rustflags = ["-C", "target-features=v7"]
 
 [target.x86_64-unknown-linux-musl]
 rustflags = [
   "-C",
   "target-feature=-crt-static",
+  "-C",
+  "target-cpu=haswell",
 ]
 
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
-rustflags = ["-C", "target-feature=-crt-static"]
+rustflags = [
+  "-C",
+  "target-feature=-crt-static",
+  "-C",
+  "target-features=v8.1a",
+]
