--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,21 +1,62 @@
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "link-args=/NODEFAULTLIB:libcmt.lib"]
 
+[target.x86_64-apple-darwin]
+rustflags = [
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
+]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
+]
+
 [target.aarch64-apple-darwin]
-rustflags = ["-C", "target-cpu=apple-a14"]
+rustflags = [
+  "-C",
+  "target-cpu=apple-a14",
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
+]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
-rustflags = ["-C", "target-cpu=cortex-a57"]
+rustflags = [
+  "-C",
+  "target-cpu=cortex-a57",
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
+]
 
 [target.armv7-unknown-linux-gnueabihf]
 linker = "arm-linux-gnueabihf-gcc"
-rustflags = ["-C", "target-cpu=cortex-a7"]
+rustflags = [
+  "-C",
+  "target-cpu=cortex-a7",
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
+]
 
 [target.x86_64-unknown-linux-musl]
 rustflags = [
   "-C",
   "target-feature=-crt-static",
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
 ]
 
 [target.aarch64-unknown-linux-musl]
@@ -25,4 +66,8 @@ rustflags = [
   "target-feature=-crt-static",
   "-C",
   "target-cpu=cortex-a57",
+  "-C",
+  "linker-plugin-lto",
+  "-C",
+  "linker=clang",
 ]
