--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,14 @@ crate-type = ["cdylib"]
 anyhow = "1"
 base64 = "0.13"
 cssparser = "0.29"
-napi = {version = "2", default-features = false, features = ["napi3", "serde-json", "compat-mode"]}
-napi-derive = {version = "2", default-features = false, features = ["compat-mode"]}
+napi = { version = "2", default-features = false, features = [
+  "napi3",
+  "serde-json",
+  "compat-mode",
+] }
+napi-derive = { version = "2", default-features = false, features = [
+  "compat-mode",
+] }
 nom = "7"
 once_cell = "1"
 ravif = "0.8"
@@ -28,7 +34,7 @@ mimalloc-rust = "0.1"
 
 [build-dependencies]
 cc = "1"
-napi-build = "1"
+napi-build = "2"
 
 [profile.release]
 codegen-units = 1
