--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@octokit/rest": "^18.12.0",
     "@swc-node/register": "^1.5.1",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "ava": "^4.2.0",
@@ -89,7 +90,6 @@
     "pinst": "^3.0.0",
     "png.js": "^0.2.1",
     "prettier": "^2.6.2",
-    "putasset": "^6.0.0",
     "skia-canvas": "^0.9.29",
     "typescript": "^4.7.2"
   },
