--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -37,8 +37,8 @@ jobs:
             target: 'x86_64-unknown-linux-gnu'
             downloadTarget: ''
             docker: |
-              docker pull ghcr.io/brooooooklyn/canvas/debian-builder:buster
-              docker tag ghcr.io/brooooooklyn/canvas/debian-builder:buster builder
+              docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal
+              docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal builder
             build: |
               docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "yarn build && strip skia.linux-x64-gnu.node"
           - host: ubuntu-latest
