--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,9 +25,6 @@ jobs:
           check-latest: true
           cache: 'yarn'
 
-      - name: Install nasm
-        uses: ilammy/setup-nasm@v1
-
       - name: Install
         uses: actions-rs/toolchain@v1
         with:
@@ -53,7 +50,9 @@ jobs:
         run: yarn install --immutable --mode=skip-build
 
       - name: Download skia binary
-        run: node ./scripts/release-skia-binary.js --download
+        run: |
+          git config --global --add safe.directory $(pwd)
+          node ./scripts/release-skia-binary.js --download
 
       - name: 'Lint JS/TS'
         run: yarn lint
