test on stretch [skip skia]

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -282,7 +282,7 @@ jobs:
         shell: bash
 
       - name: Test bindings
-        run: docker run --rm -v $(pwd):/canvas -w /canvas node:${{ matrix.node }}-buster-slim yarn test
+        run: docker run --rm -v $(pwd):/canvas -w /canvas node:${{ matrix.node }}-slim yarn test
 
       - name: Test failed
         if: ${{ failure() }}
