--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -59,15 +59,14 @@ jobs:
               export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
               yarn build --target aarch64-apple-darwin
               strip -x skia.darwin-arm64.node
-          - host: ubuntu-18.04
+          - host: ubuntu-latest
             downloadTarget: 'aarch64-unknown-linux-gnu'
             target: 'aarch64-unknown-linux-gnu'
-            setup: |
-              sudo apt-get update
-              sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu  -y
+            docker: |
+              docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal-aarch64
+              docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal-aarch64 builder
             build: |
-              yarn build --target aarch64-unknown-linux-gnu
-              aarch64-linux-gnu-strip skia.linux-arm64-gnu.node
+              docker run --rm -v ~/.cargo/git:/usr/local/cargo/git -v ~/.cargo/registry:/usr/local/cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "rustup toolchain install $(cat ./rust-toolchain) && rustup target add aarch64-unknown-linux-gnu && yarn build --target aarch64-unknown-linux-gnu && llvm-strip-14 skia.linux-arm64-gnu.node"
           - host: ubuntu-latest
             target: 'aarch64-unknown-linux-musl'
             downloadTarget: 'aarch64-unknown-linux-musl'
