--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup QEMU
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
