--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ nom = "7"
 once_cell = "1"
 ravif = "0.8"
 regex = "1"
-"rgb" = "0.8"
+rgb = "0.8"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
