--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "benny": "^3.7.1",
     "canvas": "^2.9.1",
     "canvaskit-wasm": "^0.35.0",
-    "colorette": "^2.0.16",
+    "colorette": "^2.0.19",
     "conventional-changelog-cli": "^2.2.2",
     "echarts": "^5.3.2",
     "eslint": "^8.16.0",
@@ -91,7 +91,9 @@
     "pinst": "^3.0.0",
     "png.js": "^0.2.1",
     "prettier": "^2.6.2",
+    "pretty-bytes": "^6.0.0",
     "skia-canvas": "^1.0.0",
+    "table": "^6.8.0",
     "typescript": "^4.7.2"
   },
   "lint-staged": {
