--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -36,18 +36,22 @@ jobs:
           - host: ubuntu-latest
             target: 'x86_64-unknown-linux-gnu'
             downloadTarget: ''
-            docker: |
-              docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal
-              docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal builder
-            build: |
-              docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "yarn build && strip skia.linux-x64-gnu.node"
+            docker: ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal
+            build: >-
+              set -e &&
+              yarn build &&
+              strip skia.linux-x64-gnu.node
           - host: ubuntu-latest
             downloadTarget: 'x86_64-unknown-linux-musl'
             target: 'x86_64-unknown-linux-musl'
-            docker: |
-              docker pull ghcr.io/brooooooklyn/canvas/musl-builder:lts
-              docker tag ghcr.io/brooooooklyn/canvas/musl-builder:lts builder
-            build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "yarn build && strip skia.linux-x64-musl.node"
+            docker: ghcr.io/brooooooklyn/canvas/musl-builder:lts
+            build: >-
+              set -e &&
+              export LIB_AOM_STATIC_LIB_PATH=/usr/lib &&
+              export LIB_AOM_INCLUDE_PATH=/usr/include/aom/aom &&
+              export LIB_AOM_PKG_CONFIG_PATH=/usr/lib/pkgconfig &&
+              yarn build --target x86_64-unknown-linux-musl &&
+              strip skia.linux-x64-musl.node
           - host: macos-latest
             downloadTarget: 'aarch64-apple-darwin'
             target: 'aarch64-apple-darwin'
@@ -62,18 +66,27 @@ jobs:
           - host: ubuntu-latest
             downloadTarget: 'aarch64-unknown-linux-gnu'
             target: 'aarch64-unknown-linux-gnu'
-            docker: |
-              docker pull ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal-aarch64
-              docker tag ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal-aarch64 builder
-            build: |
-              docker run --rm -v ~/.cargo/git:/usr/local/cargo/git -v ~/.cargo/registry:/usr/local/cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "rustup toolchain install $(cat ./rust-toolchain) && rustup target add aarch64-unknown-linux-gnu && yarn build --target aarch64-unknown-linux-gnu && llvm-strip-14 skia.linux-arm64-gnu.node"
+            docker: ghcr.io/brooooooklyn/canvas/ubuntu-builder:focal-aarch64
+            build: >-
+              set -e &&
+              rustup toolchain install $(cat ./rust-toolchain) &&
+              rustup target add aarch64-unknown-linux-gnu &&
+              yarn build --target aarch64-unknown-linux-gnu &&
+              llvm-strip-14 skia.linux-arm64-gnu.node
           - host: ubuntu-latest
             target: 'aarch64-unknown-linux-musl'
             downloadTarget: 'aarch64-unknown-linux-musl'
-            docker: |
-              docker pull ghcr.io/brooooooklyn/canvas/musl-builder:lts
-              docker tag ghcr.io/brooooooklyn/canvas/musl-builder:lts builder
-            build: docker run --rm -v ~/.cargo/git:/root/.cargo/git -v ~/.cargo/registry:/root/.cargo/registry -v $(pwd):/canvas -w /canvas builder sh -c "rustup toolchain install $(cat ./rust-toolchain) && rustup target add aarch64-unknown-linux-musl && yarn build --target aarch64-unknown-linux-musl && /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip skia.linux-arm64-musl.node"
+            docker: ghcr.io/brooooooklyn/canvas/musl-builder:lts
+            build: >-
+              set -e &&
+              rustup toolchain install $(cat ./rust-toolchain) &&
+              rustup target add aarch64-unknown-linux-musl &&
+              unset RUSTFLAGS &&
+              export LIB_AOM_PKG_CONFIG_PATH=/usr/aarch64-alpine-linux-musl/aom/lib/pkgconfig/aom.pc &&
+              export LIB_AOM_INCLUDE_PATH=/usr/aarch64-alpine-linux-musl/aom/include &&
+              export LIB_AOM_STATIC_LIB_PATH=/usr/aarch64-alpine-linux-musl/aom/lib &&
+              yarn build --target aarch64-unknown-linux-musl &&
+              /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip skia.linux-arm64-musl.node
           - host: ubuntu-18.04
             target: 'armv7-unknown-linux-gnueabihf'
             downloadTarget: 'armv7-unknown-linux-gnueabihf'
@@ -134,9 +147,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: ${{ matrix.settings.target }}-cargo-cache
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            .cargo-cache
+            target/
+          key: ${{ matrix.settings.target }}-cargo-registry
 
       - name: Cache yarn
         uses: actions/cache@v3
@@ -147,12 +163,6 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable --mode=skip-build
 
-      - name: Pull latest image
-        run: ${{ matrix.settings.docker }}
-        env:
-          DOCKER_REGISTRY_URL: ghcr.io
-        if: ${{ matrix.settings.docker }}
-
       - name: Setup toolchain
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
@@ -161,7 +171,16 @@ jobs:
         run: node ./scripts/release-skia-binary.js --download --target=${{ matrix.settings.downloadTarget }}
 
       - name: 'Build'
+        if: ${{ !matrix.settings.docker }}
         run: ${{ matrix.settings.build }}
+
+      - name: Build in docker
+        uses: addnab/docker-run-action@v3
+        if: ${{ matrix.settings.docker }}
+        with:
+          image: ${{ matrix.settings.docker }}
+          options: --user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build
+          run: ${{ matrix.settings.build }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
