--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,14 @@ cssparser = "0.29"
 napi = { version = "2", default-features = false, features = [
   "napi3",
   "serde-json",
-  "compat-mode",
 ] }
-napi-derive = { version = "2", default-features = false, features = [
-  "compat-mode",
-] }
+napi-derive = { version = "2", default-features = false }
 nom = "7"
+num_cpus = "1"
 once_cell = "1"
-ravif = "0.8"
+libavif = { version = "0.10", default-features = false, features = [
+  "codec-aom",
+] }
 regex = "1"
 rgb = "0.8"
 serde = "1"
