--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   "scripts": {
     "artifacts": "napi artifacts",
     "bench": "node -r @swc-node/register benchmark/bench.ts",
-    "build": "napi build --platform --release",
-    "build:debug": "napi build --platform",
+    "build": "napi build --platform --release --js js-binding.js",
+    "build:debug": "napi build --platform --js js-binding.js",
     "format": "run-p format:source format:rs",
     "format:rs": "cargo fmt",
     "format:source": "prettier . -w",
