--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@napi-rs/cli": "^2.11.4",
     "@octokit/rest": "^19.0.4",
     "@swc-node/register": "^1.5.1",
+    "@swc/core": "^1.3.4",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
