--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -93,8 +93,15 @@ jobs:
             setup: |
               sudo apt-get update
               sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf -y
+              docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+              docker buildx build --load --platform linux/arm/v7 -t ubuntu:jammy-armv7 . -f jammy-armv7.Dockerfile
+              docker run --rm -dt --name ubuntu-jammy-armv7 ubuntu:jammy-armv7
+              sudo mkdir -p /usr/arm-linux-gnueabihf/lib/llvm-14
+              sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-14/lib /usr/arm-linux-gnueabihf/lib/llvm-14/lib
+              sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-14/include /usr/arm-linux-gnueabihf/lib/llvm-14/include
+              docker stop ubuntu-jammy-armv7
             build: |
-              yarn build --target armv7-unknown-linux-gnueabihf --zig --zig-link-only
+              yarn build --target armv7-unknown-linux-gnueabihf --zig --zig-link-only --zig-abi-suffix=2.18
               arm-linux-gnueabihf-strip skia.linux-arm-gnueabihf.node
           - host: ubuntu-latest
             target: 'aarch64-linux-android'
@@ -126,6 +133,17 @@ jobs:
           node-version: 18
           check-latest: true
           cache: 'yarn'
+
+      - name: Set up QEMU
+        if: ${{ matrix.settings.target == 'armv7-unknown-linux-gnueabihf' }}
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/arm/v7
+      - name: Set up Docker Buildx
+        if: ${{ matrix.settings.target == 'armv7-unknown-linux-gnueabihf' }}
+        uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/arm/v7
 
       - uses: goto-bus-stop/setup-zig@v2
         if: ${{ matrix.settings.target == 'armv7-unknown-linux-gnueabihf' }}
