fix: reject if image is not supported

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 anyhow = "1"
 base64 = "0.21"
 cssparser = "0.29"
+infer = "0.12"
 napi = { version = "2", default-features = false, features = [
   "napi3",
   "serde-json",
