--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "outDir": "dist",
+    "sourceMap": true,
     "lib": ["ESNext", "DOM"]
   },
   "exclude": ["node_modules", "depot_tools", "skia", "skia-c", "example", "target", "npm"]
