--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "bench": "node -r @swc-node/register benchmark/bench.ts",
     "build": "napi build --platform --release --js js-binding.js",
     "build:debug": "napi build --platform --js js-binding.js",
-    "format": "run-p format:source format:rs",
+    "format": "run-p format:source format:rs format:toml",
     "format:rs": "cargo fmt",
     "format:source": "prettier . -w",
+    "format:toml": "taplo format",
     "lint": "eslint . -c ./.eslintrc.yml",
     "prepublishOnly": "pinst --disable && napi prepublish -t npm",
     "postpublish": "pinst --enable",
@@ -62,41 +63,41 @@
     "version": "napi version && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@jimp/core": "^0.22.7",
-    "@jimp/custom": "^0.22.7",
-    "@jimp/jpeg": "^0.22.7",
-    "@jimp/png": "^0.22.7",
-    "@napi-rs/cli": "^2.14.8",
-    "@octokit/rest": "^19.0.7",
-    "@swc-node/register": "^1.6.2",
-    "@swc/core": "^1.3.39",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "ava": "^5.2.0",
+    "@jimp/core": "^0.22.8",
+    "@jimp/custom": "^0.22.8",
+    "@jimp/jpeg": "^0.22.8",
+    "@jimp/png": "^0.22.8",
+    "@napi-rs/cli": "^2.16.2",
+    "@octokit/rest": "^20.0.1",
+    "@swc-node/register": "^1.6.6",
+    "@swc/core": "^1.3.71",
+    "@taplo/cli": "^0.5.2",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "ava": "^5.3.1",
     "benny": "^3.7.1",
-    "canvas": "^2.11.0",
-    "canvaskit-wasm": "^0.38.0",
-    "colorette": "^2.0.19",
-    "conventional-changelog-cli": "^2.2.2",
-    "echarts": "^5.4.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "canvas": "^2.11.2",
+    "canvaskit-wasm": "^0.38.2",
+    "colorette": "^2.0.20",
+    "conventional-changelog-cli": "^3.0.0",
+    "echarts": "^5.4.3",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.19.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "pinst": "^3.0.0",
     "png.js": "^0.2.1",
-    "prettier": "^2.8.4",
-    "pretty-bytes": "^6.1.0",
+    "prettier": "^3.0.0",
+    "pretty-bytes": "^6.1.1",
     "skia-canvas": "^1.0.1",
     "table": "^6.8.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.1.6"
   },
   "lint-staged": {
     "*.@(js|ts|tsx|yml|yaml|md|json|html)": [
